--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
   },
   "license": "ISC",
   "author": "",
-  "type": "module",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
+  },
+  "devDependencies": {
+    "webpack": "^5.104.1",
+    "webpack-bundle-analyzer": "^5.1.0",
+    "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "html2canvas": "^1.4.1"
   }
 }
